# QProj2

./: CMakeLists.txt
application/todoApp/: CMakeLists.txt  main.cpp
application/todoApp/public/data/: entry.hpp  list.hpp
application/todoApp_win32/: CMakeLists.txt  main.cpp
application/todoApp_win32/private/data/: button.cpp  groupbox.cpp  label.cpp  propertyViewer.cpp  rectangle.cpp  textbox.cpp  widget.cpp  window.cpp
application/todoApp_win32/public/data/: button.hpp  entry.hpp  groupbox.hpp  label.hpp  list.hpp  propertyViewer.hpp  rectangle.hpp  textbox.hpp  widget.hpp  window.hpp
core/json/: CMakeLists.txt
core/json/private/: object.cpp  parser.cpp  tokenIterator.cpp
core/json/private/test/: objectTest.cpp  parserTest.cpp  tokenIteratorTest.cpp
core/json/public/: tokenIterator.hpp
core/memory/: CMakeLists.txt
core/memory/private/: dynamicArrayUnsafeHelper.cpp  ptrBlock.cpp
core/memory/public/: dynamicArray.hpp  dynamicArray.tpp  dynamicArrayUnsafeHelper.hpp  macros.hpp  observable.hpp  ownerPtr.hpp  ptrBlock.hpp  weakFromThis.hpp  weakPtr.hpp
core/qstruct_serialize/: CMakeLists.txt  main.cpp
core/qstruct_serialize/private/: converter.cpp
core/qstruct_serialize/private/test/: arrayTest.cpp  converterTest.cpp  ownerObjPtrTest.cpp  (+1 more)
core/qstruct_serialize/public/: converter.hpp
core/struct/: CMakeLists.txt
core/struct/private/: fieldType.cpp  qClass.cpp  qInsDef.cpp  qObjDef.cpp
core/struct/public/: dynamicInfo.hpp  field.hpp  fieldType.hpp  method.hpp  qClass.hpp  qInsDef.hpp  qObjDef.hpp  structMacros.hpp
utils/: modules_def.cmake
(+17 files in other folders)
